fix: avatar border issue in dark mode

--- a/components/Avatar/Avatar.module.css
+++ b/components/Avatar/Avatar.module.css
@@ -1,10 +1,11 @@
 .container {
-  height: 50px;
-  width: 50px;
+  height: 54px;
+  width: 54px;
   background: var(--color-link-focus);
   border-radius: 50%;
   overflow: hidden;
   transform: translateZ(0);
+  border: 2px solid white;
 }
 
 .avatar {
